--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,6 +1,6 @@
 # .github/workflows/frontend.yml
 
-name: Frontend CI
+name: Frontend CI/CD
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
 
     defaults:
@@ -32,3 +32,16 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-north-1
+
+      - name: Deploy to S3
+        run: aws s3 sync ./dist s3://my-igaming-leaderboard --delete
+
+      - name: Invalidate CloudFront Cache
+        run: aws cloudfront create-invalidation --distribution-id E34OTB3E2FR87F --paths "/*"
