--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write './src/**/*.{ts,tsx,js,jsx,json,css,md}'"
   },
   "dependencies": {
+    "oidc-client-ts": "^3.3.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-oidc-context": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
