--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "mongoose": "^8.16.3",
     "serverless-http": "^3.2.0"
   },
