--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,8 @@
     "eslint-config-prettier": "^10.1.5",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
+    "serverless-dotenv-plugin": "^6.0.0",
+    "serverless-offline": "^14.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
