--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -17,7 +17,7 @@ functions:
           path: /
           method: ANY
       - http:
-          path: /{proxy+}
+          path: api/{proxy+}
           method: ANY
 
 plugins:
