--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,15 @@
     "format": "prettier --write './src/**/*.{ts,tsx,js,jsx,json,css,md}'"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "bootstrap": "^5.3.7",
     "oidc-client-ts": "^3.3.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-modal": "^3.16.3",
-    "react-oidc-context": "^3.3.0"
+    "react-oidc-context": "^3.3.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
