--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint './src/**/*.{ts,tsx}'",
-    "format": "prettier --write './src/**/*.{ts,tsx,js,json,md}'"
+    "format": "prettier --write './src/**/*.{ts,tsx,js,json,md}'",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -28,15 +29,20 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/mongoose": "^5.11.96",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "serverless-dotenv-plugin": "^6.0.0",
-    "serverless-offline": "^14.4.0",
+    "serverless-offline": "^11.6.0",
+    "supertest": "^7.1.3",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.37.0"
