--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,11 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-oidc-context": "^3.3.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.28.0",
