TEST CASES FIXED

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,5 +7,6 @@
     "esModuleInterop": true,
     "strict": true,
     "typeRoots": ["./node_modules/@types", "./src/types"]
-  }
+  },
+  "include": ["src"]
 }
